GNOME Bugzilla – Bug 753863
rtsp-server: examples: Fix memory leaks when context parse fails
Last modified: 2015-09-26 08:39:26 UTC
In all places where g_option_context_parse is being used, when it fails, the context and error variables are not getting freed, which will result in memory leaks. Along with that replacing g_error_free with g_clear_error in these files, which is a better way to free error, as it checks if the variable is Non-NULL and then sets it to NULL on freeing.
Created attachment 309683 [details] [review] gst-rtsp-server: fix memory leaks during context parse failures.
commit 6d20a1c9d91fb245885de11b032df975858b8151 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Thu Aug 20 17:01:24 2015 +0900 rtsp-server: Fix memory leaks when context parse fails When g_option_context_parse fails, context and error variables are not getting free'd which results in memory leaks. Free'ing the same. And replacing g_error_free with g_clear_error, which checks if the error being passed is not NULL and sets the variable to NULL on free'ing. https://bugzilla.gnome.org/show_bug.cgi?id=753863